--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tabler/icons-react": "^3.26.0",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.454.0",
     "next": "14.1.0",
     "next-intl": "^3.5.3",
@@ -36,7 +38,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "recharts": "^2.13.3",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
